# hardware_sim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  clean  cmake_install.cmake  simulator  testCPU  testDataValue  test_program.txt
data/: bus1_whitespaces.txt  bus1_wrong.txt  cpu1.txt  cpu2.txt  mem1_wrong.txt  platform1.txt
include/: bus.hpp  component.hpp  cpu.hpp  dataValue.hpp  display.hpp  memory.hpp  platform.hpp  testUtils.hpp
src/: bus.cpp  component.cpp  component.hpp  cpu.cpp  display.cpp  memory.cpp  platform.cpp  simulator.cpp
test/: testDataValue.cpp
tests/: testBus.cpp  testCPU.cpp  testDataValue.cpp  testDisplay.cpp  testLoad.cpp  testMemory.cpp  testPlatform.cpp
